--- a/app/views/user/_new.html.erb
+++ b/app/views/user/_new.html.erb
@@ -1,35 +1,21 @@
-<div class="form-container">
-  <% if @user.errors.any? %>
-    <section class="errors">
-      <ul>
-        <% @user.errors.full_messages.each do |error| %>
-          <li><%= error %></li>
-        <% end %>
-      </ul>
-    </section>
-  <% end %>
-
-
-  <form id="signup-form" class="flex flex-row" method="post" action="/users">
-    <label class="input-group col-1-3">
-      <input id="name" class="input-group-input" type="text" name="user[name]" value="<%= @user.try(:name) %>">
-      <span class="input-group-label">Name:</span>
+<div class = "form-container">
+  <form id="signup-form" method="post" action="/users">
+    <label>
+      <span class="form-label">Name:</span>
+      <input id="name" type="text" name= "user[name]" value= " <%= @user.try(:name) %>" >
     </label>
-    <label class="input-group col-1-3">
-      <input id="username" class="input-group-input" type="text" name="user[username]" value="<%= @user.try(:username) %>">
-      <span class="input-group-label">Usernam:</span>
+    <label>
+      <span class="form-label">Username:</span>
+      <input id="username" type="text" name= "user[username]" value= " <%= @user.try(:username) %>" >
     </label>
-
-    <label class="input-group col-1-3">
-      <input id="email" class="input-group-input" type="text" name="user[email]" value="<%= @user.try(:email) %>">
-      <span class="input-group-label">Email Address:</span>
+    <label>
+      <span class="form-label">Email:</span>
+      <input id="email" type="text" name= "user[email]" value= " <%= @user.try(:email) %>" >
     </label>
-
-    <label class="input-group col-1-3">
-      <input id="password" class="input-group-input" type="text" name="user[input_password]" value="<%= @user.try(:input_password) %>">
-      <span class="input-group-label">Password:</span>
+    <label>
+      <span class="form-label">Password:</span>
+      <input id="password" type="password" name= "user[password]" >
     </label>
-
-    <button type="submit" class="button dark">Submit</button>
+    <input type="submit" value="Create your account!">
   </form>
 </div>
