Remove code trying to handle a failed autho.

--- a/app/views/_login.html.erb
+++ b/app/views/_login.html.erb
@@ -1,6 +1,6 @@
 <% if @user.errors %>
-  <% @user.errors.messages.each do |msg| %>
-    <p><%= msg %></p>
+  <% @user.errors do |error| %>
+    <p><%= error %></p>
   <% end %>
 <% end %>
 
